log
Thu Apr 16 08:01:29 PM UTC 2026: 
 tests:  0|7
total_score: 0/60
1eb2fdf
Thu Apr 16 08:37:56 PM UTC 2026: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:71:5: error: ‘size’ undeclared (first use in this function)
   71 |     size++;
      |     ^~~~
hashmap.c:71:5: note: each undeclared identifier is reported only once for each function it appears in
30e3dd3
Thu Apr 16 08:38:22 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 5/60
cb520e2
Thu Apr 16 08:40:11 PM UTC 2026: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:5: error: ‘posicioninicial’ undeclared (first use in this function)
   63 |     posicioninicial = posicion;
      |     ^~~~~~~~~~~~~~~
hashmap.c:63:5: note: each undeclared identifier is reported only once for each function it appears in
480a129
Thu Apr 16 08:40:24 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 5/60
59a47b4
Thu Apr 16 08:43:54 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 5/60
b8df107
Thu Apr 16 08:44:17 PM UTC 2026: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  1|6
total_score: 5/60
9eee816
Thu Apr 16 08:44:59 PM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|6
total_score: 5/60
c602b1c
Thu Apr 16 08:45:33 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 15/60
bf4ecd8
Sun Apr 19 11:19:15 PM UTC 2026: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 20/60
7f5ea7d
Sun Apr 19 11:28:36 PM UTC 2026: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:96:24: error: array subscript is not an integer
   96 |     while (map->buckets[index] != NULL) {
      |                        ^
hashmap.c:105:25: error: ‘posicioninicial’ undeclared (first use in this function); did you mean ‘posicioninical’?
  105 |         if (posicion == posicioninicial) break;
      |                         ^~~~~~~~~~~~~~~
      |                         posicioninical
hashmap.c:105:25: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:94:10: error: unused variable ‘posicioninical’ [-Werror=unused-variable]
   94 |     long posicioninical = posicion;
      |          ^~~~~~~~~~~~~~
cc1: all warnings being treated as errors
e6524dc
Sun Apr 19 11:28:52 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:96:24: error: array subscript is not an integer
   96 |     while (map->buckets[index] != NULL) {
      |                        ^
0d5243d
Sun Apr 19 11:29:06 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 30/60
1158926
Sun Apr 19 11:30:23 PM UTC 2026: 
 hashmap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  11|2
total_score: 40/60
f4de546
